# LLM-Selector

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  demo.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
llm_selector/: __init__.py  config.py  demo.py  selector.py
tests/: README.md  __init__.py  test_error_handling.py  test_integration.py  test_llm_selector.py  test_performance.py
